--- a/app/views/services/warehouse_inquiry.html.erb
+++ b/app/views/services/warehouse_inquiry.html.erb
@@ -1,3 +1,4 @@
+<div class="user-form1">
 <div class="container">
   <div class="row">
     <div class="col-lg-12 col-sm-12">
@@ -15,4 +16,5 @@
     </div>
   </div>
   <%= render partial: 'services/form', locals: { contact: @contact } %>
+</div>
 </div>
