--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -1,4 +1,8 @@
+
+ 
+ 
 <!-- Contact -->
+<div class="user-form1">
 	<div id="contact" class="section md-padding">
 
 		<!-- Container -->
@@ -18,7 +22,7 @@
 					<div class="contact">
 						<i class="fa fa-phone"></i>
 						<h3>Phone</h3>
-						<p>020-3001-3155</p>
+						<p class="para">020-3001-3155</p>
 					</div>
 				</div>
 				<!-- /contact -->
@@ -28,7 +32,7 @@
 					<div class="contact">
 						<i class="fa fa-envelope"></i>
 						<h3>Email</h3>
-						<p>support@3scsolution.com</p>
+						<p class="para">support@3scsolution.com</p>
 					</div>
 				</div>
 				<!-- /contact -->
@@ -37,16 +41,17 @@
 					<div class="contact">
 						<i class="fa fa-map-marker"></i>
 						<h3>Address</h3>
-						<p>EON Free Zone, Kharadi, Pune Maharashtra 411014 </p>
+						<p class="para">Wolrd Trade Center (Tower 1), EON Free Zone, Kharadi, Pune Maharashtra 411014 </p>
 					</div>
 				</div>
 				<!-- /contact -->
 				<!-- contact form -->
-        <div class="contact-text">
-          <h2 class="font-h4">Inquiry Form</h2>
+	<div class="contact-text">
+	 
+          <h2 class="font-h4"><u>Inquiry Form</u></h2>
           <br>
-          <p>Please fill in the requisite details in the following form. We shall get back to you.</p>
-        </div>
+          <p class="para"><b>Please fill in the requisite details in the following form. We shall get back to you.</b></p>
+           </div>
 				<div class="col-md-8 col-md-offset-2">
 					<%= form_for @contact, url: {action: "create"}, html: {class: "contact-form"} do |f| %>
 						<% if @contact.errors.full_messages.any? %>
@@ -66,17 +71,13 @@
 						<br>
 						<%= f.submit "Send message", class: "main-btn" %>
 					<% end %>
-				</div>
+		     </div>
+				
 				<!-- /contact form -->
+				
 			</div>
 			<!-- /Row -->
 		</div>
 		<!-- /Container -->
 	</div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.4750725976933!2d73.94710931489324!3d18.552608787390266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3c4e0b8713f%3A0x9807fa35834e0fe4!2sss+supply+chain+solution+Pvt.+Ltd.+(3SC)!5e0!3m2!1sen!2sin!4v1517904743929" width="1250" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	<!-- /Contact -->
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('#contact_mobile_number').val($('#country_code').val());
-    });
-  </script>
+</div>>
