Working for subs

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,7 +2,7 @@
     margin-top: 150px;
     margin-bottom: 150px;
     margin-right: 200px;
-    margin-left: 200px;
+    margin-left: 110px;
    padding:20px;
    border-style: inset;
    box-shadow: 10px 10px 5px grey;}
@@ -87,6 +87,10 @@ border-collapse: separate;
 .text-data-align{font-size: 25px;text-align: left;}
 .confirm-btn{font-size: 20px;}
 #datepicker{font-weight: 500;border: 2px solid gray !important;}
+#load_source_pin_code,#load_destination_pin_code,#load_information,
+#truck_expected_price,#truck_licence_number,
+#truck_current_transporter_name,#max-truck-capacity,
+#truck_vehicle_number,#truck_driver_name,#truck_driver_mobile_no,#truck_information{border: 2px solid gray !important;}
 .information-text{width: 100% !important;}
 #validate-msg-mobile, #validate-msg-vehicle-number{
   display:block;
