--- a/app/views/ordermailer/booking_email.html.erb
+++ b/app/views/ordermailer/booking_email.html.erb
@@ -3,7 +3,7 @@
     <meta content=‘text/html; charset=UTF-8’ http–equiv=‘Content-Type’ />
   </head>
   <body>
-		<h1>Hi <%= @load.user.email %></h1>
+		<h1>Hi <%= "sandeep.chourey@3scsolution.com" %></h1>
 		<h3>You get affer from a truck owner.</h3>
 <h1>truck owner details </h1>
  
