--- a/app/views/loads/_index_loader.html.erb
+++ b/app/views/loads/_index_loader.html.erb
@@ -8,7 +8,7 @@
   <th scope="col">Schedule Date</th>
   <th scope="col">Willing to shared truck</th>
   <th scope="col">Map</th>
-  <th scope="col">Action</th>
+  <th scope="col">Status</th>
   </tr>
   <%= hidden_field_tag "truck_id", @trucks.present? ? @trucks.first.id : "" %>
   <% loads.each do |load| %>
@@ -49,7 +49,7 @@
           <% elsif load.booked == "accept_request"%>
             <%= link_to "Accepted request", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
           <% else %>
-            <%= link_to "Accept", send_booked_mail_path(:id=> load.id, :truck_id=> @trucks.present? ? @trucks.first.id : ''), :class=>"btn-xs btn-danger btn-white-color" %>
+            <%= link_to "Accept", (current_user.role.name != "Load Provider" ? send_booked_mail_path(:id=> load.id, :truck_id=> @trucks.present? ? @trucks.first.id : '') : 'javascript:void(0)'), :class=>"btn-xs btn-danger btn-white-color" %>
           <% end %>  
           </td>
       </td>
