--- a/app/views/loads/root_direction.html.erb
+++ b/app/views/loads/root_direction.html.erb
@@ -42,7 +42,7 @@
         if (status === 'OK') {
           directionsDisplay.setDirections(response);
         } else {
-          window.alert('Directions request failed due to ' + status);
+          // window.alert('Directions request failed due to ' + status);
         }
       });
     }
@@ -50,3 +50,5 @@
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwzFICznWaTiSDezTgXy9TNj0amM9oWaM&callback=initMap">
   </script>
+
+  <!-- rails g model subscription  -->
