--- a/app/views/orders/payment_data.html.erb
+++ b/app/views/orders/payment_data.html.erb
@@ -19,12 +19,10 @@
           <script
               src="https://checkout.razorpay.com/v1/checkout.js"
               data-key="<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>"
-
-              data-amount="<%= "#{@load.expected_price}" %>"
+              data-amount="<%= @load.expected_price.to_i * 100 %>"
               data-name="<%= "#{@load.user.full_name}" %>"
               data-description="<% @load.information.present? ? "#{@load.information}" : '' %>"
               data-image="/assets/3SC.png"
-
               data-prefill.name="<%= "#{current_user.full_name}" %>"
               data-prefill.email="<%= "#{current_user.email}" %>"
               data-theme.color="#F37254"
@@ -47,7 +45,7 @@
 $(document).ready(function(){
   var options = {
       "key": "<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>",
-      "amount": "<%= "#{@load.expected_price}" %>",
+      "amount": "<%= "#{@load.expected_price.to_i}" %>",
       "name": "<%= "#{@load.user.full_name}" %>",
       "description": "<%= "#{@load.information}" %>",
       "image": "/assets/3SC.png",
