--- a/app/views/help_center/our_network.html.erb
+++ b/app/views/help_center/our_network.html.erb
@@ -1,3 +1,4 @@
+<div class="user-form">
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwzFICznWaTiSDezTgXy9TNj0amM9oWaM&callback=initMap"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
@@ -18,6 +19,7 @@
       <div id="multi_markers"></div>
     </div>
   </div>
+</div>
 </div>
 <script type="text/javascript">
   var handler = Gmaps.build('Google');
