--- a/app/views/loads/_index.html.erb
+++ b/app/views/loads/_index.html.erb
@@ -6,14 +6,14 @@
   <th scope="col">Weight (Metric Ton)</th>
   <th scope="col">Truck Type</th>
   <th scope="col">Schedule Date</th>
-  <th scope="col">Shared truck</th>
+  <!-- <th scope="col">Shared truck</th> -->
   <th scope="col">Load Type</th>
   <th scope="col">Pick up point</th>
   <th scope="col">Drop point</th>
   <th scope="col">Expected Price(INR)</th>
   <th scope="col">Information</th>
   <th scope="col">Truck Body</th>
-  <th scope="col">Map</th>
+  <!-- <th scope="col">Map</th> -->
   <th scope="col">Action</th>
   </tr>
   <%= hidden_field_tag "truck_id", @trucks.present? ? @trucks.first.id : "" %>
@@ -37,9 +37,9 @@
         <td>
           <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= load.load_schedule_date.to_formatted_s(:long) %>><%= load.load_schedule_date.to_formatted_s(:long)%></span>
         </td>
-        <td>
-          <span> <%= load.load_sharing(load) %></span>
-        </td>
+        <!-- <td>
+          <span> <%#= load.load_sharing(load) %></span>
+        </td> -->
         <td>
           <span> <%= load.load_type if load.load_type.present?  %></span>
         </td>
@@ -50,7 +50,7 @@
           <span> <%= load.destination_pin_code if load.destination_pin_code.present?  %></span>
         </td>
         <td>
-          <% load_price = load.expected_price.to_i * 0.10 if load.expected_price.present? %>
+          <% load_price = load.expected_price.to_i * 0.20 if load.expected_price.present? %>
           <% load_price = load.expected_price.to_i - load_price.to_i %>
           <span> <%= load_price  if load.expected_price.present?  %></span>
         </td>
@@ -60,11 +60,11 @@
         <td>
           <span> <%= load.load_body= true ? "Open" : "Close" if load.load_body.present? %></span>
         </td>
-        <td>
+        <!-- <td>
           <center>
-            <%= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:load_from=> load.load_from, :load_to=>load.load_from), target: "_blank" %>
+            <%#= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:load_from=> load.load_from, :load_to=>load.load_from), target: "_blank" %>
           </center>
-        </td>
+        </td> -->
         <td>
           <% if load.booked == "requesting" %>
             <% if params[:user_id].present? %>
