--- a/app/views/trucks/_index_user_profile.html.erb
+++ b/app/views/trucks/_index_user_profile.html.erb
@@ -6,7 +6,7 @@
     <th scope="col">Truck Type</th>
     <th scope="col">Schedule Date</th>
     <th scope="col">Vehicle Number</th>
-    <th scope="col">Map</th>
+    <!-- <th scope="col">Map</th> -->
     <th scope="col">Action</th>
   </tr>
   <% trucks.each do |truck| %>
@@ -29,11 +29,11 @@
       <td>
         <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= truck.vehicle_number if truck.vehicle_number.present? %>><%= truck.vehicle_number if truck.vehicle_number.present? %></span>
       </td>
-      <td>
+      <!-- <td>
         <center>
-          <%= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:truck_from=> truck.truck_from, :truck_to=>truck.truck_to), target: "_blank" %>
+          <%#= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:truck_from=> truck.truck_from, :truck_to=>truck.truck_to), target: "_blank" %>
         </center>
-        </td>
+        </td> -->
       <td>
         <% if truck.truck_booked == "requesting" %>
           <% if params[:user_id].present? %>
