--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+<script src="/assets/custom.js"></script>
 <div class="container">
   <h2>Post a Truck</h2>
   <p>Plese fill the following form to load  truck details</p>
@@ -47,21 +48,22 @@
         <td>
           <div class="form-group">
         <label for="from">Truck Type<span>*</span></label>
-          <%= f.select :truck_type, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [k,v]}),:prompt=>"Truck type" %>
+          <%= f.select :truck_type, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [k]}),:prompt=>"Truck type" %>
       </div>
         </td>
-        <td>
+        <!-- <td>
           <div class="form-group">
-        <label for="from">Max truck capacity(Metric Ton)<span>*</span></label>
-         <input id="max-truck-capacity" name="truck-capacity" type="text" readonly></input>
+        <label for="from">Max truck capacity(Metric Ton)<span>*</span></label> -->
+        <%#= f.text_field :truck_weight, :id=> "max-truck-capacity", :readonly => true %> 
+         <!-- <input id="max-truck-capacity" name="truck-capacity" type="text" readonly></input>
       </div>
-        </td>
+        </td> -->
         <td>
           <div class="form-group">
             <label for="from">Available truck capacity(Metric Ton)<span>*</span></label>
             <%= f.select :truck_weight, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [v,v]}),:prompt=>"Select Weight" %>
           </div>
-        </td>
+        </td> 
       </tr>
       <tr>
         <td >  </td>
@@ -100,20 +102,20 @@
           <%= f.select :documentation, options_for_select(Truck::SHARE_DOCS.map {|k,v| [k,v]}, :selected => params[:truck].present? ? params[:truck][:documentation] : ''  ) %>
       </div>
       </td>
-      <td>
+      <!-- <td>
       <div class="form-group form-margin-6">
         <label for="from">Sharing truck</label>
-          <%= f.select :sharing, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=>  params[:truck].present? ? params[:truck][:sharing] : ''  ) %>      
+          <%#= f.select :sharing, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=>  params[:truck].present? ? params[:truck][:sharing] : ''  ) %>      
       </div>
-      </td>
+      </td> -->
       </tr>
       <tr>
-        <td>
+        <!-- <td>
           <div class="form-group">
           <label for="from">Frequency<span>*</span></label>
-            <%= f.select :frequency, options_for_select(Truck::FREQUENCY.map {|k,v| [k,v]}),:prompt=>"Frequency" %>
+            <%#= f.select :frequency, options_for_select(Truck::FREQUENCY.map {|k,v| [k,v]}),:prompt=>"Frequency" %>
           </div>
-        </td>
+        </td> -->
         <td>
           <div class="form-group" id="pin-code-destination">
             <label for="from">Information (if any)</label>
@@ -140,12 +142,12 @@
             <%= f.text_field :licence_number, class: "input control-label col-sm-4", :placeholder=> "Driver licence number", :maxlength => 15 %>
           </div>
         </td>
-        <td>
+        <!-- <td>
           <div class="form-group">
            <label for="from">Current transporter name <span>*</span></span></label>
-            <%= f.text_field :current_transporter_name, class: "input control-label col-sm-4", :placeholder=> "Current transporter name" %>
+            <%#= f.text_field :current_transporter_name, class: "input control-label col-sm-4", :placeholder=> "Current transporter name" %>
           </div>
-        </td>
+        </td> -->
       </tr>
       <tr>
         <td colspan="3">
@@ -165,9 +167,9 @@
       $('input.timepicker').timepicker();
     });
 })(jQuery);
-  $("#truck_truck_type").change(function(){
-    $("#max-truck-capacity").val($('#truck_truck_type :selected').val());
-  });
+  // $("#truck_truck_type").change(function(){
+  //   $("#max-truck-capacity").val($('#truck_truck_type :selected').val());
+  // });
   $("#new_truck").submit(function(){
     var avali_capicity = $('#truck_truck_weight :selected').val();
     var max_capicity = $('#max-truck-capacity').val();
@@ -178,24 +180,4 @@
     //   return false;
     // }
 });
-  var maxmobileLength = 13;
-  var maxtrucknumberLength = 13;
-  var maxLICnumberLength = 15
-  $('#truck_driver_mobile_no').keyup(function() {
-    var length = $(this).val().length;
-    var length = maxmobileLength-length;
-    $('#validate-msg-mobile').text(length);
-  });
-  $('#truck_vehicle_number').keyup(function() {
-    var length = $(this).val().length;
-    var length = maxtrucknumberLength-length;
-    $('#validate-msg-vehicle-number').text(length);
-  });
-  $('#truck_licence_number').keyup(function() {
-    var length = $(this).val().length;
-    var length = maxLICnumberLength-length;
-    // $('#validate-msg-vehicle-number').text(length);
-  });
 </script>
-
-
