--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="user-form2">
 <div class="contact-text">
 	<% page_title = request.path.gsub('-', ' ').gsub("/","").capitalize %>
   <h2 class="font-h4"><%= page_title %> form</h2>
@@ -14,4 +15,5 @@
 		<%= f.text_area :messsage, class: "input messsage-txt", placeholder:"Write Message *" , :required => true %>
 		<%= f.submit "Send message", class: "main-btn" %>
 	<% end %>
+</div>
 </div>
