--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -75,7 +75,7 @@
                  <li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
                </li>
                <li>
-                 <%= link_to "Show Diretion", root_direction_path %>
+                 <%= link_to "Show Direction", root_direction_path %>
                </li>         
              </ul>
            </li>
