--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="user-form">
-<h2><center>Sign up</center></h2>  
+<h2>Sign up</h2>  
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="error-set">
@@ -21,13 +21,13 @@
     <%= f.label :password_confirmation %><span>*</span><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "input" , placeholder: "Password Confirmation" %> 
   </div>
-  <h2>User Type</h2>
+  <h3>User Type</h3>
     <div class="field user-form-width">
       <%= f.label :User_Type %><span>*</span><br />
       <%= f.select "role_id", options_for_select(Role.where(:role_enabled=> true).collect{ |u| [u.name, u.id]}), :prompt=>"Select Role" %>
     </div>
 <!-- Personal info  -->
-<h2>Personal info</h2>
+<h3>Personal info</h3>
   <div class="field user-form-width">
     <%= f.label :first_name %><span>*</span><br />
       <%= f.text_field :first_name , placeholder: "First Name" %> 
