change in laod distance_calculation form

--- a/app/views/loads/distance_calculation.html.erb
+++ b/app/views/loads/distance_calculation.html.erb
@@ -1,4 +1,5 @@
-<div class="header-text">
+ <div class="user-form2"> 
+ <div class="header-text">
   <h1>Calculate <span class="color_orange">Distance</span></h1>
   <p>Please enter source city and destination city to calculate distance.</p>
 </div>
@@ -33,6 +34,7 @@
   <div class="calculate-data" style="float:right;margin-right: :40px;">
     <%= render partial: 'distance_calculation', locals: {response: @response}  %>
   </div>
+</div>
 </div>
 
 <script type="text/javascript">
