franchise_inquiry form

--- a/app/views/services/franchise_inquiry.html.erb
+++ b/app/views/services/franchise_inquiry.html.erb
@@ -1,3 +1,20 @@
-<div class="user-form2">
+<div class="user-form1">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-sm-12">
+        <h1 class="header-font">Franchise<span class="color_orange"> Inquiry</span></h1>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col-xs-12">
+          <img src="/assets/12.jpg" alt="Vehicle Loan Inquiry" class="img-responsive center-block">
+      </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 vehicle_padding">
+      <p><span class="ts_font"><b>Franchising</b> </span>is simply a method for expanding a business and distributing goods and services through a licensing relationship.  In franchising, franchisors (a person or company that grants the license to a third party for the conducting of a business under their marks) not only specify the products and services that will be offered by the franchisees (a person or company who is granted the license to do business under the trademark and trade name by the franchisor), but also provide them with an operating system, brand and support.</p>
+    </div>
+  </div>
 <%= render partial: 'services/form', locals: { contact: @contact } %>
 </div>
+</div> 
