Modification on cs file

--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -72,13 +72,13 @@
     <td>
       <div class="form-group ">
         <label for="from">Scheduled Date <span>*</span></span></label>
-         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Scheduled Date" %></span>
+         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Date" %></span>
       </div>
     </td>
     <td>
       <div class="form-group ">
         <label for="from">Expected Price(INR) <span>*</span></span></label>
-         <span> <%= f.text_field :expected_price, :id=> "datepicker", :placeholder=> "Expected Price" %></span>
+         <span> <%= f.text_field :expected_price, :id=> "datepicker", :placeholder=> "Price" %></span>
       </div>
     </td>
   </tr>
