--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <title>FreightExchange</title>
   <%= stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag  "custom", media: "all", "data-turbolinks-track" => true %>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script> -->
+  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js", "data-turbolinks-track" => true %>
   <%#= stylesheet_link_tag  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", media: "all", "data-turbolinks-track" => true %>
   <%#= javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", "data-turbolinks-track" => true %>
   <%#= render "static/header" %>
