--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,4 +1,4 @@
-.user-form{ border: 1px; solid: black;
+.user-form{ border: 1px; border-style: black;
     margin-top: 150px;
     margin-bottom: 150px;
     margin-right: 200px;
@@ -12,7 +12,8 @@
   border-style: outset;
   background: linear-gradient(to bottom right, lightblue, white);
   box-shadow: 300px 300px 250px blue;}
-.user-form2{ border: 1px; solid: black;
+/*.user-form2{ border: 1px; border-style: black;*/
+  .user-form2{ border: 1px;
     margin-top: 150px;
     margin-bottom: 150px;
     margin-right: 50px;
@@ -38,11 +39,11 @@ block;} /*warehouse -inquiry page*/ .header-font{text-align: center;font-size:
 32px;} .flash{color: red;} #spnTruckStatus{display: none;} /*Error Load page*/
 .error-set{ padding: 20px;}
 .para{color:green;}
-.error-set1{border: 0.1px; solid: red; padding:5px;}
+.error-set1{border: 0.1px; border-style: red; padding:5px;}
 .form-group{padding-top: 20px;padding-bottom: 20px;}
 .post-form-msg{padding-top:20px;}
 .para{color:green ;}
-.error-set1{border: 0.1px; solid: red; padding:5px;
+.error-set1{border: 0.1px; border-style: red; padding:5px;
 }
 
    .post-form-msg{padding-top:20px;}
@@ -102,11 +103,12 @@ border-collapse: separate;
 .width-15-date{width: 15% !important;}
 .text-data-align{font-size: 25px;text-align: left;}
 .confirm-btn{font-size: 20px;}
-#datepicker{font-weight: 500;border: 2px; solid: gray !important;}
+#datepicker{font-weight: 500;border: 2px; border-style: gray !important;}
 #load_source_pin_code,#load_destination_pin_code,#load_information,
 #truck_expected_price,#truck_licence_number,
 #truck_current_transporter_name,#max-truck-capacity,
-#truck_vehicle_number,#truck_driver_name,#truck_driver_mobile_no,#truck_information{border: 2px; solid: gray !important;}
+/*#truck_vehicle_number,#truck_driver_name,#truck_driver_mobile_no,#truck_information{border: 2px; solid: gray !important;}*/
+#truck_vehicle_number,#truck_driver_name,#truck_driver_mobile_no,#truck_information{border: 2px;}
 .information-text{width: 100% !important;}
 #validate-msg-mobile, #validate-msg-vehicle-number{
   display:block;
@@ -162,7 +164,8 @@ border-collapse: separate;
 }
 #datepicker{
       font-weight: 500;
-    border: 2px; solid: gray !important;
+    /*border: 2px; border-style: gray !important;*/
+    border: 2px;
     width: 35%;
     margin-left: 15px;
     padding: 10px;
