--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1754,7 +1754,7 @@ header {
 
 /*razer*/
 .razorpay-payment-button{
-  background-image: asset-url('PayWithRzp.png') center no-repeat;
+  background-image: url('/images/PayWithRzp.png') center no-repeat;
   background-size: contain;
   box-shadow: none;
   border: none;
