--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="user-form2">
+<div class="user-form1">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -102,6 +102,12 @@
           <%= f.select :documentation, options_for_select(Truck::SHARE_DOCS.map {|k,v| [k,v]}, :selected => params[:truck].present? ? params[:truck][:documentation] : ''  ) %>
       </div>
       </td>
+      <td>
+          <div class="form-group">
+          <label for="from">Truck body</label>
+            <%= f.select :truck_body, options_for_select(Truck::TRUCK_BODY.map {|k,v| [k,v]}),:prompt=>"Truck body" %>
+          </div>
+        </td>
       <!-- <td>
       <div class="form-group form-margin-6">
         <label for="from">Sharing truck</label>
@@ -117,17 +123,18 @@
           </div>
         </td> -->
         <td>
+          <div class="form-group">
+           <label for="from">Driver licence number <span>*</span></span></label>
+            <%= f.text_field :licence_number, class: "input control-label col-sm-4", :placeholder=> "Driver licence number", :maxlength => 15 %>
+          </div>
+        </td>
+        <td>
           <div class="form-group" id="pin-code-destination">
             <label for="from">Information (if any)</label>
              <%= f.text_area :information, class: "input control-label col-sm-4", :class=> "information-text form-control", :placeholder=> "Information" %>
           </div>
         </td>
-        <td>
-          <div class="form-group">
-          <label for="from">Truck body</label>
-            <%= f.select :truck_body, options_for_select(Truck::TRUCK_BODY.map {|k,v| [k,v]}),:prompt=>"Truck body" %>
-          </div>
-        </td>
+        
       </tr>
       <tr>
         <!-- <td>
@@ -136,12 +143,7 @@
             <%#= f.text_field :expected_price, class: "input control-label col-sm-4", :placeholder=> "Expected Price" %>
           </div>
         </td> -->
-        <td>
-          <div class="form-group">
-           <label for="from">Driver licence number <span>*</span></span></label>
-            <%= f.text_field :licence_number, class: "input control-label col-sm-4", :placeholder=> "Driver licence number", :maxlength => 15 %>
-          </div>
-        </td>
+        
         <!-- <td>
           <div class="form-group">
            <label for="from">Current transporter name <span>*</span></span></label>
@@ -152,7 +154,8 @@
       <tr>
         <td colspan="3">
           <div>
-        <%= f.submit "Post truck", class: "main-btn" %>
+            <center> <%= f.submit "Post truck", class: "main-btn" %></center>
+       
       </div>
         </td>
       </tr>
